--- a/kinematica/basis_positie.tex
+++ b/kinematica/basis_positie.tex
@@ -468,7 +468,7 @@ y = -t^2 - 3t \Rightarrow y(x) = -(\sqrt[7]{x})^2 - 3\sqrt[7]{x}
 
 
 Let op: de \textit{verplaatsing} is niet hetzelfde als de \emph{afgelegde weg} tussen de twee bijbehorende tijdstippen. 
-Als je een rondje hebt gelopen op de atletiekpiste en terug aan start staat is je (netto) verplaatsing nul, maar jet hebt wel degelijk afstand afgelegd.
+Als je een rondje hebt gelopen op de atletiekpiste en terug aan start staat is je (netto) verplaatsing nul, maar je hebt wel degelijk afstand afgelegd.
 De verplaatsing geeft enkel het verschil (in vogelvlucht) tussen begin- en eindpunt, terwijl de afgelegde weg \(s\) gaat over de afstand die het bewegende voorwerp over zijn baan aflegt. 
 
 \begin{image}[0.5\textwidth]
