--- a/kinematica/basis_versnelling.tex
+++ b/kinematica/basis_versnelling.tex
@@ -40,7 +40,10 @@ Als enkel de \textit{grootte} van de snelheidsvector verandert, spreekt men over
 \end{definition}
 
 \begin{example}
-Een verticaal omhoog geworpen basketbal versnelt tangentieel, de bal gaat eerst trager en trager en na het hoogste punt sneller en sneller. Enkel de grootte van de snelheid verandert. De richting niet, want de bal blijft verticaal bewegen.
+Een verticaal omhoog geworpen basketbal versnelt tangentieel, de bal gaat eerst trager en trager en na het hoogste punt sneller en sneller. 
+Enkel de grootte van de snelheid verandert. De richting niet, want de bal blijft verticaal bewegen.
+De versnellingsvector staat evenwijdig met de snelheidsvector, dit volgt uit de constructie van \(\Delta(\vec{v})\). 
+Wegens de definitie van \(\vec{a}\) staan \(\vec(a)\) en \(\Delta(\vec{v})\) altijd in dezelfde richting en zin.
 
 \begin{image}[0.7\textwidth]
 	\begin{tikzpicture}[scale=1]
@@ -170,7 +173,7 @@ Een auto trekt op een rechte weg op met een versnelling van \SI{3}{\meter\per\se
 \begin{exercise}
 \begin{question}
 Als een basketbal botst op de grond verandert de snelheidsvector ook van \textit{zin}. 
-Maar een tekening met vectoren net voor en na de bots.  
+Maak een tekening met vectoren net voor en na de bots.  
 \begin{oplossing}
 	\begin{image}
 	\begin{tikzpicture}[scale=1]
@@ -589,15 +592,15 @@ In twee dimensies kan de snelheid naast een verandering van grootte ook een vera
 
 \begin{remark}
 
-	Wagens en fietsen hebben ook versnellingen. 
-	Weet dat deze versnellingen nauwelijks iets te maken hebben met het fysisch begrip versnelling. 
-	Een auto die in derde versnelling met een constante snelheid van 50 km/h rechtdoor rijdt, versnelt bijvoorbeeld helemaal niet. 
-	Zijn versnelling is 0 m/s². 
-	Een juistere naam om de standen van de versnellingspook of de ketting weer te geven had eigenlijk “snelheid” geweest omdat de versnelling waarin je rijdt veel meer zegt over welke snelheid je hebt. 
-	Kleine versnellingen gebruik je voor kleine snelheden en grote versnellingen voor grote snelheden. 
-	Onze Franstalige zuiderburen hebben daar een logischere naam voor, namelijk: “vitesse” (= snelheid). 
-	Probeer dus de begrippen snelheid en versnelling niet door elkaar te gooien, want ze hebben een heel andere betekenis! 
-	Het is alsof je zou zeggen dat positie en snelheid hetzelfde is!
+Wagens en fietsen hebben ook versnellingen. 
+Weet dat deze versnellingen nauwelijks iets te maken hebben met het fysisch begrip versnelling. 
+Een auto die in derde versnelling met een constante snelheid van 50 km/h rechtdoor rijdt, versnelt bijvoorbeeld helemaal niet. 
+Zijn versnelling is 0 m/s². 
+Een juistere naam om de standen van de versnellingspook of de ketting weer te geven had eigenlijk “snelheid” geweest omdat de versnelling waarin je rijdt veel meer zegt over welke snelheid je hebt. 
+Kleine versnellingen gebruik je voor kleine snelheden en grote versnellingen voor grote snelheden. 
+Onze Franstalige zuiderburen hebben daar een logischere naam voor, namelijk: “vitesse” (= snelheid). 
+Probeer dus de begrippen snelheid en versnelling niet door elkaar te gooien, want ze hebben een heel andere betekenis! 
+Het is alsof je zou zeggen dat positie en snelheid hetzelfde is!
 
 
 \end{remark}
